--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,3 +1,7 @@
+* {
+    font-size: x-large;
+}
+
 .split {
   height: 100%;
   width: 50%;
@@ -37,6 +41,7 @@
 }
 
 .profile_image {
-  width: 25%;
-  height: 25%;
+  width: 500px;
+  height: auto;
+  border-radius: 50%;
 }
